adicionado atualizacoes para security e suporte para sonarqube